# mzk

./: .gitignore  CMakeLists.txt  main.cc  makefile  mzk.cc  object.h  pointer.h  property.h  shared-object.h  shared.h  signal-object.h  signal.h  test
bits/: .object.inl.swp  object.inl  pointer.inl  property.inl  shared-object.inl  signal-object.inl  signal.inl
details/: property.inl  shared.inl  signal.inl
include/mzk/: animator.h  event-loop.h  logger.h  mzk.h  object.h  property.h  shared.h  signal.h  state-machine.h  state.h  threaded.h  timer-loop.h  timer.h
include/mzk/details/: animator.inl  logger.inl  property.inl  shared.inl  signal.inl  state-machine.inl  state.inl
src/: animator.cc  logger.cc  property.cc  shared.cc  signal.cc  thread-data.cc  thread-data.h  threaded.cc  timer-loop.cc  timer-thread.cc  timer-thread.h  timer.cc
test/: main.cc  makefile
